--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,14 @@ services:
       - .:/app
     networks:
       - app-network
+    deploy:
+      resources:
+        limits:
+          cpus: "0.4"
+          memory: 512M
+        reservations:
+          cpus: "0.1"
+          memory: 256M
 
   db:
     image: postgres:13
@@ -29,11 +37,21 @@ services:
       - "5432:5432"
     networks:
       - app-network
+    deploy:
+      resources:
+        limits:
+          cpus: "0.4"
+          memory: 256M
 
   redis:
     image: redis:6
     networks:
       - app-network
+    deploy:
+      resources:
+        limits:
+          cpus: "0.2"
+          memory: 128M
 
 networks:
   app-network:
