--- a/.air.toml
+++ b/.air.toml
@@ -6,7 +6,7 @@ cmd = "go build -buildvcs=false -o ./tmp/main ."
 bin = "./tmp/main"
 full_bin = "APP_ENV=dev ./tmp/main"
 include_ext = ["go", "tpl", "tmpl", "html"]
-exclude_dir = ["assets", "tmp", "vendor", ".git"]
+exclude_dir = ["assets", "tmp", "vendor"]
 include_dir = []
 exclude_file = []
 delay = 1000 # ms
