--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,17 @@
 services:
   app:
-    networks:
-      - coolify
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: dockerfile
     ports:
       - "${APP_PORT:-8080}:8080"
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
+      - REDIS_URL=${REDIS_URL}
+
+    networks:
+      - coolify
+
 networks:
   coolify:
-    driver: bridge
+    external: true
